Mark auth provider routes as experimental
